--- a/app/templates/partials/head.hbs
+++ b/app/templates/partials/head.hbs
@@ -32,7 +32,7 @@
 <!-- GOOGLE FONTS
 http://www.google.com/fonts/#UsePlace:use/Collection:Open+Sans:400italic,700italic,400,700|Roboto+Slab:400,300
 -->
-<link href='http://fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,400,700|Roboto+Slab:400,300' rel='stylesheet' type='text/css'>
+<link href='//fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,400,700|Roboto+Slab:400,300' rel='stylesheet' type='text/css'>
 
 {{!
 <script type="text/javascript">
