CSS: allow social media mobile overrides

--- a/app/styles/scss/main.scss
+++ b/app/styles/scss/main.scss
@@ -19,6 +19,7 @@ $fa-font-path: '../../bower_components/font-awesome/fonts';
 @import 'bootstrap/navbar';
 
 @import 'bootstrap/navbar_offcanvas';
+@import 'bootstrap/social_media';
 @import 'bootstrap/intro';
 @import 'bootstrap/img-caption';
 @import 'bootstrap/work';
@@ -26,4 +27,3 @@ $fa-font-path: '../../bower_components/font-awesome/fonts';
 @import 'bootstrap/contact';
 @import 'bootstrap/footer';
 @import 'bootstrap/video';
-
