--- a/app/styles/css/main.css
+++ b/app/styles/css/main.css
@@ -9113,6 +9113,13 @@ body {
 
 }
 */
+.social-btns li span {
+  display: none; }
+
+@media (min-width: 480px) {
+  .social-btns li span {
+    display: inline; } }
+
 section[role=intro] {
   padding-top: 20px;
   padding-bottom: 20px; }
