Blog: title has no top margin

--- a/app/styles/scss/bootstrap/_blog.scss
+++ b/app/styles/scss/bootstrap/_blog.scss
@@ -83,7 +83,7 @@ section[role=index]{
       color:$blue;
       font-size:18px;
       margin-bottom:5px;
-
+      margin-top: 0;
     }
 
     .info{
