--- a/app/styles/scss/bootstrap/_blog.scss
+++ b/app/styles/scss/bootstrap/_blog.scss
@@ -83,6 +83,8 @@ section[role=index]{
       color:$blue;
       font-size:18px;
       margin-bottom:5px;
+    }
+    .link-list .title {
       margin-top: 0;
     }
 
