Add auth tags for parsing

--- a/app/templates/partials/inc_btm_tags.hbs
+++ b/app/templates/partials/inc_btm_tags.hbs
@@ -6,6 +6,7 @@
     })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
     ga('create', '{{settings.GA_ID}}', '{{settings.PRODUCTION_HOSTNAME}}');
+    // ga('set', 'userId', '#{USER_ID}'); // Swapped out & uncommented in auth project
     ga('send', 'pageview');
   </script>
 {{/if}}
@@ -71,13 +72,6 @@
         dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
         (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
         })();
-        /*
-        (function () {
-        var s = document.createElement('script'); s.async = true;
-        s.type = 'text/javascript';
-        s.src = 'http://' + disqus_shortname + '.disqus.com/count.js';
-        (document.getElementsByTagName('HEAD')[0] || document.getElementsByTagName('BODY')[0]).appendChild(s);
-        }());*/
       </script>
     {{/if}}
   {{/isnt}}
