--- a/app/templates/partials/navbar_items.hbs
+++ b/app/templates/partials/navbar_items.hbs
@@ -9,6 +9,7 @@
     {{/is}}
     <li class="{{#is "blog" page.activeTab }} active {{/is}}"><a href="{{settings.BLOG_URL}}" target="{{settings.BLOG_URL_TARGET}}"><i class="fa fa-book fa-lg"></i>Blog</a></li>
   </ul>
+  <!--#{AUTH_LOG_OUT}-->
 </div>
 
 
