--- a/app/templates/partials/head.hbs
+++ b/app/templates/partials/head.hbs
@@ -51,3 +51,15 @@ http://www.google.com/fonts/#UsePlace:use/Collection:Open+Sans:400italic,700ital
 </script>
 }}
 
+{{#if production}}
+  <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+    ga('create', '{{settings.GA_ID}}', 'auto');
+    // ga('set', 'userId', '#{USER_ID}'); // Swapped out & uncommented in auth project
+    ga('send', 'pageview');
+  </script>
+{{/if}}
