Allow blog posts to link externally
Skipping tests. Blog aspect of this site is being phased out.

--- a/app/templates/blog/partials/post_index_item.hbs
+++ b/app/templates/blog/partials/post_index_item.hbs
@@ -1,6 +1,6 @@
 
 <li class=" category-{{#withFirst data.categories}}{{hyphenate this}}{{/withFirst}}">
-  <a href ="{{this.basename}}" class="info-wrap">
+  <a href ="{{#isnt data.link undefined}} {{data.link}} {{else}} {{this.basename}} {{/isnt}}" class="info-wrap">
     <span class="info">
 
       <span class="title h2">{{data.title}}</span>
